k8s/03-grails3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grails3-service
  namespace: grails3
spec:
  selector:
    app: grails3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
